--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@angular/pwa": "^0.803.5",
     "@angular/router": "~8.2.7",
     "@angular/service-worker": "~8.2.7",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "material-icons": "^0.3.1",
+    "ngx-material-timepicker": "^5.1.1",
     "popper": "^1.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
